cmake_minimum_required(VERSION 3.9)
project(learn)

set(CMAKE_CXX_STANDARD 11)

add_executable(learn src/chapter/main.cpp src/chapter/pointer.cpp src/chapter/pointer.h src/chapter/vector_and_array.cpp src/chapter/vector_and_array.h src/chapter/loop_and_relation.cpp src/chapter/loop_and_relation.h src/chapter6/use_cctypes.cpp src/chapter6/use_cctypes.h src/chapter6/cin_fish.cpp src/chapter6/cin_fish.h)